# jmdictdb

./: .gitignore  Cargo.toml  LICENSE.md  README.md
src/: dict_db.rs  lib.rs  main.rs  models.rs
